<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAppLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_label"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tvFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_label"
                android:textSize="25sp"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAppLabel"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/etFrom"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="numberSigned"
                android:hint="@string/from_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFrom"
                android:layout_marginTop="5dp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/tvTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_label"
                android:textSize="25sp"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etFrom"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/etTo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="numberSigned"
                android:hint="@string/to_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTo"
                android:layout_marginTop="5dp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/tvDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divider_label"
                android:textSize="25sp"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etTo"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/etDivider"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/divider_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDivider"
                android:layout_marginTop="5dp"
                android:autofillHints="" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                android:textSize="20sp"
                android:backgroundTint="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etDivider"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:paddingHorizontal="15dp"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tvCreator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator"
                android:textSize="20sp"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvResult"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>